--- a/main/assets/css/ccdd.css
+++ b/main/assets/css/ccdd.css
@@ -30,9 +30,29 @@ section{
   fill: currentColor;
 }
 
-#portfolio{
+#portfolio, #difference{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 }
+
+.company-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 10vw;
+  max-height: 15vh;
+}
+
+.logo-exp{
+  font-size: small;
+}
+
+.company-info{
+  margin-top: 10px;
+  font-size: x-large;
+}
+
