--- a/main/assets/css/ccdd.css
+++ b/main/assets/css/ccdd.css
@@ -30,7 +30,7 @@ section{
   fill: currentColor;
 }
 
-#portfolio, #difference{
+#portfolio, #difference, #services-wrapper{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,5 +54,16 @@ section{
 .company-info{
   margin-top: 10px;
   font-size: x-large;
+}
+
+#socialproof{
+  margin-top:5vh;
+
+
+}
+
+
+.noise{
+  margin-top: 10vh;
 }
 
