--- a/main/assets/css/components/_1_accordion.scss
+++ b/main/assets/css/components/_1_accordion.scss
@@ -10,11 +10,11 @@ Usage: codyhouse.co/license
 -------------------------------- */ 
 
 :root {
-  // general
+  /* general */
   --accordion-border-width: 1px;
-  // icon
-  --accordion-icon-size: 1em;
-  --accordion-icon-stroke-width: 1.5px;
+  /* icon */
+  --accordion-icon-size: 20px;
+  --accordion-icon-stroke-width: 2px;
 }
 
 .accordion {}
@@ -29,7 +29,7 @@ Usage: codyhouse.co/license
   }
 }
 
-.accordion__header { // button
+.accordion__header { /* button */
   width: 100%;
   display: flex;
   align-items: center;
@@ -51,28 +51,32 @@ Usage: codyhouse.co/license
 .accordion__icon-plus {
   .icon__group {
     will-change: transform;
-    transform-origin: 8px 8px;
+    transform-origin: 50% 50%;
+  }
+}
 
+.accordion__icon-arrow {
+  .icon__group {
     > * {
-      transform-origin: 8px 8px;
+      transform-origin: 10px 14px;
     }
   }
 }
 
-.accordion__icon-arrow,
 .accordion__icon-arrow-v2 {
   .icon__group {
     > * {
-      stroke-dasharray: 17;
-      transform: translateY(3px);
+      transform-origin: 50% 50%;
+      stroke-dasharray: 20;
+      transform: translateY(4px);
     }
 
     > *:first-child {
-      stroke-dashoffset: 8.5;
+      stroke-dashoffset: 10.15;
     }
 
     > *:last-child {
-      stroke-dashoffset: 8.5;
+      stroke-dashoffset: 10.15;
     }
   }
 }
@@ -81,6 +85,10 @@ Usage: codyhouse.co/license
   .icon__group {
     transform: rotate(-90deg);
 
+    > * {
+      transform-origin: 50% 50%;
+    }
+
     > *:first-child {
       transform: rotate(-90deg);
     }
@@ -88,17 +96,17 @@ Usage: codyhouse.co/license
 }
 
 .accordion__item--is-open > .accordion__header {
-  > .accordion__icon-arrow .icon__group { // animated arrow icon
+  > .accordion__icon-arrow .icon__group { /* animated arrow icon */
     > *:first-child {
-      transform: translateY(-3px) rotate(-90deg);
+      transform: translateY(-8px) rotate(-90deg);
     }
 
     > *:last-child {
-      transform: translateY(-3px) rotate(90deg);
+      transform: translateY(-8px) rotate(90deg);
     }
   }
 
-  > .accordion__icon-arrow-v2 .icon__group { // animated arrow icon v2
+  > .accordion__icon-arrow-v2 .icon__group { /* animated arrow icon v2 */
     transform: rotate(-90deg);
 
     > *:first-child, *:last-child {
@@ -107,7 +115,7 @@ Usage: codyhouse.co/license
     }
   }
 
-  > .accordion__icon-plus .icon__group { // animated plus icon
+  > .accordion__icon-plus .icon__group { /* animated plus icon */
     transform: rotate(0);
 
     > *:first-child {
@@ -128,7 +136,7 @@ Usage: codyhouse.co/license
   }
 }
 
-// animations
+/* animations */
 .accordion[data-animation="on"] {
   .accordion__item--is-open .accordion__panel > * {
     animation: accordion-entry-animation .4s var(--ease-out);
