--- a/main/assets/css/components/_1_filter-navigation.scss
+++ b/main/assets/css/components/_1_filter-navigation.scss
@@ -9,12 +9,11 @@ Usage: codyhouse.co/license
 
 -------------------------------- */
 
-// --expanded version
+/* --expanded version */
 .filter-nav--expanded {
   .filter-nav__nav {
     display: flex;
     overflow: auto;
-    padding: var(--space-xs) 0;
   }
 
   .filter-nav__list {
@@ -28,39 +27,111 @@ Usage: codyhouse.co/license
     z-index: 1;
   }
 
-  .filter-nav__btn { // <button> element inside each list item
-    margin: 0 var(--space-xxxs);
-    padding: var(--space-xxxs) var(--space-xs);
-    color: alpha(var(--color-contrast-higher), 0.5);
+  .filter-nav__btn { /* <button> element inside each list item */
     cursor: pointer;
-    transition: color .2s;
-
-    &:hover {
-      color: var(--color-contrast-higher);
-    }
-
-    &[aria-current="true"] {
-      color: var(--color-primary);
-    }
   }
 
-  .filter-nav__marker { // animated marker
+  .filter-nav__marker { /* animated marker */
     position: absolute;
-    top: 0;
-    left: 0;
     width: 0;
-    height: 100%;
-    background-color: var(--color-bg-light);
-    box-shadow: var(--inner-glow), var(--shadow-sm);
     pointer-events: none;
-    border-radius: var(--radius-md);
     transition: transform .3s, width .3s;
     transition-timing-function: var(--ease-in-out);
     will-change: width, transform;
   }
+
+  /* --v1 */
+  &.filter-nav--v1 {
+    .filter-nav__nav {
+      padding: var(--space-xs) 0;
+    }
+
+    .filter-nav__btn {
+      margin: 0 var(--space-xxxs);
+      padding: var(--space-xxxs) var(--space-xs);
+      color: alpha(var(--color-contrast-higher), 0.5);
+      
+      transition: color .2s;
+  
+      &:hover {
+        color: var(--color-contrast-higher);
+      }
+  
+      &[aria-current="true"] {
+        color: var(--color-primary);
+      }
+    }
+  
+    .filter-nav__marker { /* animated marker */
+      top: 0;
+      left: 0;
+      height: 100%;
+      background-color: var(--color-bg-light);
+      box-shadow: var(--inner-glow), var(--shadow-sm);
+      border-radius: var(--radius-md);
+    }
+  }
+
+  /* --v2 */
+  &.filter-nav--v2 {
+    .filter-nav__list {
+      background-color: var(--color-bg-darker);
+      padding: var(--space-xxxs);
+      border-radius: 50em;
+    }
+
+    .filter-nav__btn {
+      padding: var(--space-xxxs) var(--space-sm);
+      color: alpha(var(--color-contrast-higher), 0.5);
+      
+      transition: color .2s;
+  
+      &:hover {
+        color: var(--color-contrast-higher);
+      }
+  
+      &[aria-current="true"] {
+        color: var(--color-primary);
+      }
+    }
+  
+    .filter-nav__marker { /* animated marker */
+      top: var(--space-xxxs);
+      left: 0;
+      height: calc(100% - var(--space-xxxs)*2);
+      background-color: var(--color-bg-light);
+      box-shadow: var(--inner-glow), var(--shadow-sm);
+      border-radius: 50em;
+    }
+  }
+
+  /* --v3 */
+  &.filter-nav--v3 {
+    .filter-nav__btn {
+      padding: var(--space-xxxs) var(--space-sm);
+      color: alpha(var(--color-contrast-higher), 0.5);
+      
+      transition: color .2s;
+  
+      &:hover {
+        color: var(--color-contrast-higher);
+      }
+  
+      &[aria-current="true"] {
+        color: var(--color-primary);
+      }
+    }
+  
+    .filter-nav__marker { /* animated marker */
+      bottom: 0;
+      left: 0;
+      height: 1px;
+      background-color: var(--color-primary);
+    }
+  }
 }
 
-// --collapsed version - available horizontal space not enough to contain all list items
+/* --collapsed version - available horizontal space not enough to contain all list items */
 .filter-nav--collapsed {
   .filter-nav__wrapper {
     position: fixed;
@@ -101,7 +172,7 @@ Usage: codyhouse.co/license
     overflow: auto;
     padding: 0 0 var(--space-md);
 
-    &::before { // top shadow - visible if menu height triggers vertical scrolling
+    &::before { /* top shadow - visible if menu height triggers vertical scrolling */
       content: '';
       display: block;
       width: 100%;
@@ -115,7 +186,7 @@ Usage: codyhouse.co/license
   }
 
   .filter-nav__btn {
-    display: block; // fallback
+    display: block; /* fallback */
     display: flex;
     align-items: center;
     width: 100%;
@@ -133,27 +204,27 @@ Usage: codyhouse.co/license
       color: var(--color-primary);
     }
 
-    &::before { // check icon next to the selected button
+    &::before { /* check icon next to the selected button */
       content: '';
       display: block;
-      height: 1em;
-      width: 1em;
+      height: 16px;
+      width: 16px;
       margin-right: var(--space-xxxs);
       background-color: transparent;
     }
 
     &[aria-current="true"]::before {
-      background-color: var(--color-primary); // icon color
-      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpolyline stroke-width='1.5' stroke='%23000000' fill='none' stroke-linecap='round' stroke-linejoin='round' points='1,9 5,13 15,3 '/%3E%3C/svg%3E");
+      background-color: var(--color-primary); /* icon color */
+      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpolyline stroke-width='2' stroke='%23000000' fill='none' stroke-linecap='round' stroke-linejoin='round' points='1,9 5,13 15,3 '/%3E%3C/svg%3E");
     }
   }
 
-  .filter-nav__marker { // hide animated marker
+  .filter-nav__marker { /* hide animated marker */
     display: none !important;
   }
 
-  .filter-nav__close-btn { // X button
-    --size: 2em;
+  .filter-nav__close-btn { /* X button */
+    --size: 32px;
     width: var(--size);
     height: var(--size);
 
@@ -184,8 +255,7 @@ Usage: codyhouse.co/license
   }
 }
 
-// no js
+/* no js */
 html:not(.js) .filter-nav__nav {
   justify-content: left;
 }
-
