--- a/main/assets/css/ccdd.css
+++ b/main/assets/css/ccdd.css
@@ -8,7 +8,7 @@
   background: rgb(0, 0, 0);
 }
 
-section{
+section, #testimonials{
   min-height: 100vh;
   display:flex;
   align-items: center;
@@ -102,5 +102,48 @@ color: darkgray;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.hidden{
+  display: none;
+}
+
+.thankyou{
+  padding: 20vh 10vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.rfp-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#testimonials{
+  margin-bottom: 20vh;
+}
+  @media (max-width: 480px) {
+    #moreabout {
+      display:none;
+    }
+  }
+
+  @media (max-width: 480px) {
+    #guardian-logo, #studio-phi-logo {
+     display: none;
+    }
+  }
+
+.pricing{
+  padding: 0vh 15vw;
+  margin-bottom: 10vh;
+}
+
+.fake-nav{
+  margin-top: 2vh;
+  margin-left: 10vw;
 }
 
