--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -15957,6 +15957,187 @@ Usage: codyhouse.co/license
 
 /* -------------------------------- 
 
+File#: _1_cross-table
+Title: Cross Table
+Descr: Two-way data tables used to display correlation between row and column variables
+Usage: codyhouse.co/license
+
+-------------------------------- */
+.cross-table {
+  position: relative;
+  z-index: 1;
+}
+
+.cross-table:not(.cross-table--cards) {
+  --text-unit: 1em;
+  --space-unit: 1em;
+  font-size: var(--text-sm);
+}
+.cross-table:not(.cross-table--cards) .cross-table__row .cross-table__cell:first-child {
+  border-left-width: 0;
+}
+.cross-table:not(.cross-table--cards) .cross-table__row .cross-table__cell:last-child {
+  border-right-width: 0;
+}
+.cross-table:not(.cross-table--cards) .cross-table__header .cross-table__cell {
+  border-top-width: 0;
+}
+.cross-table:not(.cross-table--cards) .cross-table__row--w-full {
+  background-color: var(--color-contrast-lower);
+}
+.cross-table:not(.cross-table--cards) .cross-table__row--w-full .cross-table__cell {
+  font-weight: 600;
+}
+.cross-table:not(.cross-table--cards) .cross-table__cell {
+  border: 1px solid var(--color-contrast-lower);
+  border-bottom-width: 0;
+  padding: var(--space-xs);
+}
+.cross-table:not(.cross-table--cards) .cross-table__label {
+  display: none;
+}
+
+.cross-table--cards {
+  display: block;
+  overflow: hidden;
+}
+.cross-table--cards .cross-table__header {
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+.cross-table--cards .cross-table__body {
+  position: relative;
+  display: flex;
+  max-width: 100%;
+  overflow: auto;
+  padding-bottom: var(--space-sm);
+}
+.cross-table--cards .cross-table__body::-webkit-scrollbar {
+  height: 8px;
+}
+.cross-table--cards .cross-table__body::-webkit-scrollbar-track {
+  background-color: var(--color-contrast-lower);
+}
+.cross-table--cards .cross-table__body::-webkit-scrollbar-thumb {
+  background-color: hsla(var(--color-contrast-higher-h), var(--color-contrast-higher-s), var(--color-contrast-higher-l), 0.9);
+  border-radius: 50em;
+}
+.cross-table--cards .cross-table__body::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-contrast-higher);
+}
+.cross-table--cards .cross-table__body::after {
+  content: "";
+  display: block;
+  height: 1px;
+  padding-left: 1px;
+}
+.cross-table--cards .cross-table__row {
+  display: flex;
+  flex-direction: column;
+  width: 260px;
+  flex-shrink: 0;
+  margin-right: var(--space-sm);
+}
+.cross-table--cards .cross-table__cell {
+  --cell-border-width: 2px;
+  font-size: 1em;
+  display: flex;
+  padding: var(--space-sm);
+  justify-content: space-between;
+  align-items: center;
+  min-height: 56px;
+  text-align: left;
+  background-color: var(--color-bg);
+  border-left-width: var(--cell-border-width);
+  border-right-width: var(--cell-border-width);
+  border-style: solid;
+  border-color: var(--color-contrast-lower);
+}
+.cross-table--cards .cross-table__cell:first-child {
+  border-left-width: var(--cell-border-width);
+  border-top-width: var(--cell-border-width);
+  border-radius: var(--radius-md) var(--radius-md) 0 0;
+  background-color: var(--color-contrast-lower);
+  font-weight: 600;
+}
+.cross-table--cards .cross-table__cell:last-child {
+  border-right-width: var(--cell-border-width);
+  border-bottom-width: var(--cell-border-width);
+  border-radius: 0 0 var(--radius-md) var(--radius-md);
+}
+.cross-table--cards .cross-table__label {
+  display: inline;
+  margin-right: var(--space-xs);
+}
+.cross-table--cards .cross-table__row--w-full {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+}
+.cross-table--cards .cross-table__row--w-full .cross-table__cell {
+  border: none;
+  background-color: transparent;
+  font-weight: normal;
+  min-height: 0;
+}
+
+[class*=cross-table--expanded]::before {
+  display: none;
+}
+
+.cross-table--expanded\@xs::before {
+  content: "cards";
+}
+@media (min-width: 32rem) {
+  .cross-table--expanded\@xs::before {
+    content: "expanded";
+  }
+}
+
+.cross-table--expanded\@sm::before {
+  content: "cards";
+}
+@media (min-width: 48rem) {
+  .cross-table--expanded\@sm::before {
+    content: "expanded";
+  }
+}
+
+.cross-table--expanded\@md::before {
+  content: "cards";
+}
+@media (min-width: 64rem) {
+  .cross-table--expanded\@md::before {
+    content: "expanded";
+  }
+}
+
+.cross-table--expanded\@lg::before {
+  content: "cards";
+}
+@media (min-width: 80rem) {
+  .cross-table--expanded\@lg::before {
+    content: "expanded";
+  }
+}
+
+.cross-table--expanded\@xl::before {
+  content: "cards";
+}
+@media (min-width: 90rem) {
+  .cross-table--expanded\@xl::before {
+    content: "expanded";
+  }
+}
+
+/* -------------------------------- 
+
 File#: _1_custom-checkbox
 Title: Custom Checkbox
 Descr: Replace the native checkbox button with a custom element (e.g., an icon)
@@ -20342,6 +20523,146 @@ Usage: codyhouse.co/license
 .switch-icon--slide-left.switch-icon--state-b .switch-icon__icon--b,
 .switch-icon--slide-left.switch-icon--hover:hover .switch-icon__icon--b {
   transform: translateX(0);
+}
+
+/* -------------------------------- 
+
+File#: _1_table
+Title: Table
+Descr: Data tables used to organize and display information in rows and columns
+Usage: codyhouse.co/license
+
+-------------------------------- */
+.table {
+  position: relative;
+  z-index: 1;
+}
+
+.table:not(.table--expanded) {
+  border-collapse: separate;
+  border-spacing: 0 var(--space-md);
+  margin-top: calc(-2 * var(--space-md));
+}
+.table:not(.table--expanded) .table__header {
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+}
+.table:not(.table--expanded) .table__row .table__cell:first-child {
+  border-radius: var(--radius-md) var(--radius-md) 0 0;
+}
+.table:not(.table--expanded) .table__row .table__cell:last-child {
+  border-radius: 0 0 var(--radius-md) var(--radius-md);
+}
+.table:not(.table--expanded) .table__row .table__cell:last-child::after {
+  display: none;
+}
+.table:not(.table--expanded) .table__cell {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  text-align: right;
+  padding: var(--space-md);
+  background-color: var(--color-bg-light);
+}
+.table:not(.table--expanded) .table__cell::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: var(--space-md);
+  width: calc(100% - (2 * var(--space-md)));
+  height: 1px;
+  background-color: var(--color-contrast-lower);
+}
+.table:not(.table--expanded) .table__label {
+  font-weight: bold;
+  text-align: left;
+  color: var(--color-contrast-higher);
+  margin-right: var(--space-md);
+}
+
+.table--expanded {
+  border-bottom: 1px solid var(--color-contrast-lower);
+}
+.table--expanded .table__header .table__cell {
+  position: relative;
+  z-index: 10;
+  background-color: var(--color-bg);
+  border-bottom: 1px solid var(--color-contrast-lower);
+  font-weight: bold;
+  color: var(--color-contrast-higher);
+}
+.table--expanded .table__body .table__row:nth-child(odd) {
+  background-color: hsla(var(--color-bg-dark-h), var(--color-bg-dark-s), var(--color-bg-dark-l), 0.85);
+}
+.table--expanded .table__cell {
+  padding: var(--space-sm);
+}
+.table--expanded .table__label {
+  display: none;
+}
+.table--expanded .table__header--sticky .table__cell {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.js .table {
+  opacity: 0;
+}
+.js .table--loaded {
+  opacity: 1;
+}
+
+[class*=table--expanded]::before {
+  display: none;
+}
+
+.table--expanded\@xs::before {
+  content: "collapsed";
+}
+@media (min-width: 32rem) {
+  .table--expanded\@xs::before {
+    content: "expanded";
+  }
+}
+
+.table--expanded\@sm::before {
+  content: "collapsed";
+}
+@media (min-width: 48rem) {
+  .table--expanded\@sm::before {
+    content: "expanded";
+  }
+}
+
+.table--expanded\@md::before {
+  content: "collapsed";
+}
+@media (min-width: 64rem) {
+  .table--expanded\@md::before {
+    content: "expanded";
+  }
+}
+
+.table--expanded\@lg::before {
+  content: "collapsed";
+}
+@media (min-width: 80rem) {
+  .table--expanded\@lg::before {
+    content: "expanded";
+  }
+}
+
+.table--expanded\@xl::before {
+  content: "collapsed";
+}
+@media (min-width: 90rem) {
+  .table--expanded\@xl::before {
+    content: "expanded";
+  }
 }
 
 /* -------------------------------- 
