--- a/main/assets/css/components/_1_custom-checkbox.scss
+++ b/main/assets/css/components/_1_custom-checkbox.scss
@@ -25,7 +25,7 @@ Usage: codyhouse.co/license
 
 .custom-checkbox__input {
   position: relative;
-  // hide native input
+  /* hide native input */
   margin: 0;
   padding: 0;
   opacity: 0;
@@ -44,14 +44,14 @@ Usage: codyhouse.co/license
   z-index: -1;
   pointer-events: none;
   transition: transform .2s;
-  color: alpha(var(--color-contrast-low), 0.65); // unchecked color
+  color: alpha(var(--color-contrast-low), 0.65); /* unchecked color */
 
   &::before, &::after {
     content: '';
     position: absolute;
   }
 
-  &::before { // focus circle
+  &::before { /* focus circle */
     width: 160%;
     height: 160%;
     background-color: currentColor;
@@ -64,16 +64,16 @@ Usage: codyhouse.co/license
     transition: transform .2s;
   }
 
-  &::after { // custom checkbox
+  &::after { /* custom checkbox */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 
-    // custom checkbox style
+    /* custom checkbox style */
     background-color: var(--color-bg);
     border-radius: var(--custom-checkbox-radius);
-    box-shadow: inset 0 0 0 var(--custom-checkbox-border-width) currentColor, var(--shadow-xs); // border
+    box-shadow: inset 0 0 0 var(--custom-checkbox-border-width) currentColor, var(--shadow-xs); /* border */
   }
 }
 
@@ -89,7 +89,7 @@ Usage: codyhouse.co/license
 }
 
 .custom-checkbox__input:checked ~ .custom-checkbox__control {
-  color: var(--color-primary); // checked color
+  color: var(--color-primary); /* checked color */
 
   &::after {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpolyline points='2.5 8 6.5 12 13.5 3' fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5'/%3E%3C/svg%3E");
@@ -116,7 +116,7 @@ Usage: codyhouse.co/license
   transform: translate(-50%, -50%) scale(1);
 }
 
-// --icon
+/* --icon */
 .custom-checkbox--icon {
   --custom-checkbox-size: 32px;
 
